--- a/css/tutorials.css
+++ b/css/tutorials.css
@@ -379,3 +379,84 @@ h2 {
     text-align: center;
     width: 100%;
 }
+
+body.default-theme {
+    background-color: white;
+    color: #978f8f;
+  }
+  body.dark-theme {
+    background-color:rgb(0, 0, 0);
+    color: white;
+  }
+  body.light-theme {
+    background-color:#fef6eb;
+    color: #333;
+  }
+  body.large-text-theme {
+    font-size: 1.2em;
+  }
+  .theme-switcher {
+    float: left;
+    text-align: center;
+    padding: 12px;
+    color: white;
+    font-size: 17px;
+    width: 16.66%; 
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+
+.theme-switcher label {
+    margin-right: 8px;
+    font-size: 16px;
+    color: white;
+}
+
+.theme-switcher select {
+    padding: 5px 10px;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    background-color: #e1b4c8;
+    color: #333;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.theme-switcher select:focus {
+    outline: none;
+    border: 1px solid #c77d99;
+}
+
+@media (max-width: 768px) {
+    .theme-switcher {
+        width: 100%;
+        justify-content: flex-start;
+        margin-top: 10px;
+    }
+
+    .theme-switcher select {
+        width: 100%;
+        font-size: 12px;
+    }
+
+    .theme-switcher label {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 500px) {
+    .theme-switcher {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .theme-switcher label {
+        display: none; 
+    }
+
+    .theme-switcher select {
+        width: 100%; 
+        font-size: 12px;
+    }
+}
