--- a/css/tutorials.css
+++ b/css/tutorials.css
@@ -233,7 +233,7 @@ footer a {
     flex: 1;
     padding: 15px;
     box-sizing: border-box;
-    color: #555;
+    color: hsl(318, 13%, 54%);
     margin-right: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: larger;
@@ -288,7 +288,9 @@ div.gallery img:hover {
 
 div.desc {
     padding: 10px;
-    font-size: 1rem;
+    font-size:larger;
+    color: hsl(318, 13%, 54%);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -381,15 +383,15 @@ h2 {
 }
 
 body.default-theme {
-    background-color: white;
+    background-color:#fef6eb;
     color: #978f8f;
   }
   body.dark-theme {
-    background-color:rgb(0, 0, 0);
+    background-color:hwb(0 29% 71%);
     color: white;
   }
   body.light-theme {
-    background-color:#fef6eb;
+    background-color:white;
     color: #333;
   }
   body.large-text-theme {
