--- a/css/index.css
+++ b/css/index.css
@@ -480,7 +480,7 @@ body.default-theme {
 #weather-info {
     margin-top: 20px;
     padding: 20px;
-    background-color: hsl(323, 52%, 78%);
+    background-color: rgb(222, 155, 167);
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 600px;
